# Emehcs

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  debug.hpp  defs.cpp  defs.hpp  environment.cpp  environment.hpp  eval.cpp  eval.hpp  exception.hpp  main.cpp  parser.cpp  parser.hpp  preload.cpp  preload.hpp  readme.md  readme_CN.md  tests.cpp  tests.hpp  todo.md  ui.cpp  ui.hpp  value.cpp  value.hpp
.github/workflows/: ci.yml  cmake.yml
WYaSi48H/: .gitignore
WYaSi48H/ch1/: ex1.hs  ex2.hs  ex3.hs  hello.hs
WYaSi48H/ch2/: datatypeparser.hs  ex.hs  recursiveparser.hs  simpleparser1.hs  simpleparser2.hs
WYaSi48H/ch3/: evaluator1.hs  evaluator2.hs  evaluator3.hs  evaluator3_.hs
WYaSi48H/ch4/: errorcheck.hs  errorcheck_.hs
WYaSi48H/ch5/: conditionalparser.hs  listparser.hs  operatorparser.hs
WYaSi48H/ch6/: replparser.hs
details/: scm-io.cpp  scm-io.ipp  scm-string.cpp  scm-string.ipp
test/: basic.scm  closure.scm  fib.scm  global.scm  local.scm  test1.scm  test2.scm
tests/: closure.scm  div-sqrt.rkt  filter.scm  let.scm  newton_x.rkt  string.scm  test-exec.scm  test1.scm  y-combinator.scm
